# tensor4all-rs

./: .gitignore  AGENTS.md  CITATION.cff  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE_ANALYSIS.md  PLAN_TensorLikeTrait.md  README.md  REPOSITORY_RULES.md  STRUCTURE_PROPOSAL.md  codecov.yml  coverage-thresholds.json  debug.md  design.md  index-design.md  julia_plan.md  lcov-patch.info  lcov.info  mdarray_linalg_faer_complex_svd_issue.md  pr_body.md  remaining_issues_tci.md  run_julia_tests.sh  run_python_tests.sh  treetnn.md
crates/block-array2/: Cargo.toml
crates/block-array2/src/: error.rs  lib.rs  partition.rs
crates/blocked-mdarray/: Cargo.toml
crates/blocked-mdarray/src/: block_data.rs  block_structure.rs  blocked_array.rs  blocked_data.rs  error.rs  lib.rs  matmul.rs  partition.rs  tensor_network.rs
crates/matrixci/: Cargo.toml  README.md
crates/matrixci/benches/: rrlu_bench.rs
crates/matrixci/src/: error.rs  lib.rs  matrixaca.rs  matrixci.rs  matrixlu.rs  matrixluci.rs  scalar.rs  traits.rs  util.rs
crates/matrixluci/: Cargo.toml  README.md
crates/matrixluci/benches/: dense_vs_faer.rs  lazy_block_rook.rs
crates/matrixluci/src/: block_rook.rs  dense.rs  error.rs  factors.rs  kernel.rs  lib.rs  scalar.rs  source.rs  types.rs
crates/mdarray-einsum/: Cargo.toml
crates/mdarray-einsum/src/: error.rs  hyperedge_optimizer.rs  lib.rs  multi_contract.rs  optimizer.rs  sumproduct_pair.rs  typed_tensor.rs
crates/quanticsgrids/: Cargo.toml  README.md
crates/quanticsgrids/benches/: conversions.rs
crates/quanticsgrids/src/: discretized_grid.rs  error.rs  inherent_discrete_grid.rs  lib.rs
crates/tensor4all-aci/: Cargo.toml  NOTICE  README.md
crates/tensor4all-aci/benches/: elementwise_scaling.rs
crates/tensor4all-aci/src/: batch.rs  elementwise.rs  error.rs  lib.rs  local.rs  options.rs  random_tt.rs  result.rs  scalar.rs  state.rs  tests.rs  validation.rs
crates/tensor4all-aci/tests/: elementwise.rs
crates/tensor4all-capi/: Cargo.toml  README.md  cbindgen.toml
crates/tensor4all-capi/include/: tensor4all_capi.h
crates/tensor4all-capi/src/: algorithm.rs  hdf5.rs  index.rs  lib.rs  macros.rs  mpocontraction.rs  quanticsgrids.rs  quanticstci.rs  quanticstransform.rs  simplett.rs  tensor.rs  tensorci.rs  tensortrain.rs  treetci.rs  treetn.rs  types.rs
crates/tensor4all-core/: Cargo.toml  README.md  TENSOR_LIKE_DESIGN.md
crates/tensor4all-core/common/: Cargo.toml
crates/tensor4all-core/examples/: benchmark_tensor_ops.rs
crates/tensor4all-core/linalg/: Cargo.toml
crates/tensor4all-core/src/: algorithm.rs  algorithm_to_be_removed_to_treetn.rs  any_scalar.rs  block_tensor.rs  col_major_array.rs  contract.rs  direct_sum.rs  factorize.rs  forward_ad.rs  global_default.rs  index.rs  index_like.rs  index_ops.rs  krylov.rs  lib.rs  physical_indices.rs  qr.rs  scalar.rs  smallstring.rs  storage.rs  svd.rs  tagset.rs  tensor.rs  tensor_index.rs  tensor_like.rs  truncation.rs
crates/tensor4all-core/tensor/: Cargo.toml
crates/tensor4all-core/tests/: ad_integration.rs  basic.rs  bench_contract_fit_patterns.rs  bug_qr_after_permute.rs  common_basic.rs  common_duplicate_indices.rs  common_index_ops.rs  common_index_tags.rs  common_tagset.rs  error_paths.rs  index_ops.rs  linalg_eigh.rs  linalg_factorize.rs  linalg_qr.rs  linalg_svd.rs  permute.rs  readme_contraction_example.rs  send_sync.rs  tagset.rs  tensor_any_scalar.rs  tensor_basic.rs  tensor_comparison.rs  tensor_contract_multi_pair_equivalence.rs  tensor_contract_nary_pair_equivalence.rs  tensor_contraction.rs  tensor_diag.rs  tensor_native_ad.rs  tensor_permute.rs  tensor_shape_packing.rs  tensor_tensor_like.rs  tensor_unfuse.rs
crates/tensor4all-hdf5/: Cargo.toml  README.md
crates/tensor4all-hdf5-ffi/: Cargo.toml
crates/tensor4all-hdf5-ffi/include/: tensor4all_hdf5_ffi.h
crates/tensor4all-hdf5-ffi/src/: capi.rs  class.rs  dim.rs  error.rs  globals.rs  handle.rs  init.rs  lib.rs  macros.rs  sync.rs  util.rs
crates/tensor4all-hdf5-ffi/tests/: diagnose_h5i.rs  init_test.rs
crates/tensor4all-hdf5/examples/: inspect_mps_inputs.rs
crates/tensor4all-hdf5/src/: backend.rs  compat.rs  index.rs  itensor.rs  layout.rs  lib.rs  mps.rs  schema.rs
crates/tensor4all-hdf5/tests/: test_hdf5.rs
crates/tensor4all-interpolativeqtt/: Cargo.toml  README.md
crates/tensor4all-interpolativeqtt/src/: basis.rs  error.rs  interpolation.rs  interval.rs  lib.rs  options.rs  tests.rs
crates/tensor4all-itensorlike/: Cargo.toml  README.md
crates/tensor4all-itensorlike/examples/: benchmark_contract.rs  benchmark_contract_detailed.rs  benchmark_contract_fit.rs  benchmark_contract_one_shot.rs  benchmark_contract_profiled.rs  benchmark_tt_ops.rs  test_fit_vs_zipup.rs  test_gmres_block_mpo.rs  test_gmres_block_mps.rs  test_gmres_identity_high_bonddim.rs  test_gmres_mpo.rs  test_gmres_mps.rs  test_issue207_restart_gmres.rs  test_restart_gmres_mpo.rs  test_restart_gmres_mps.rs
crates/tensor4all-itensorlike/src/: contract.rs  error.rs  lib.rs  linsolve.rs  options.rs  tensortrain.rs
crates/tensor4all-itensorlike/tests/: bench_basic_ops.rs  bench_basic_ops_old.rs  bug_complex_inner.rs  (+13 more)
crates/tensor4all-itensortrain/: Cargo.toml
crates/tensor4all-linalg/: Cargo.toml
crates/tensor4all-matrixci/: Cargo.toml
crates/tensor4all-partitionedtt/: Cargo.toml  README.md
crates/tensor4all-quanticstci/: Cargo.toml  README.md
crates/tensor4all-quanticstransform/: Cargo.toml  README.md
crates/tensor4all-simpletensortrain/: Cargo.toml  README.md
crates/tensor4all-simplett/: Cargo.toml  README.md
crates/tensor4all-tcicore/: Cargo.toml  README.md
crates/tensor4all-tensor/: Cargo.toml
crates/tensor4all-tensorbackend/: Cargo.toml  README.md
crates/tensor4all-tensorci/: Cargo.toml  README.md
crates/tensor4all-tensortrain/: Cargo.toml
crates/tensor4all-treetci/: Cargo.toml  README.md
crates/tensor4all-treetn/: Cargo.toml  README.md
pytensor4all/: .gitignore  README.md  pyproject.toml
pytensor4all/scripts/: build_capi.py
pytensor4all/tests/: __init__.py  test_index.py  test_tensor.py
(+1029 files in other folders)
