[workspace]
members = [
    "crates/tensor4all-core",
    "crates/tensor4all-itensorlike",
    "crates/tensor4all-treetn",
    "crates/quanticsgrids",
    "crates/matrixci",
    "crates/tensor4all-simpletensortrain",
    "crates/tensor4all-tensorci",
    "crates/tensor4all-capi",
    "tools/api-dump",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["tensor4all collaboration"]
license = "MIT"
repository = "https://github.com/tensor4all/tensor4all-rs"

[workspace.dependencies]
num-complex = "0.4"
num-traits = "0.2"
anyhow = "1.0"
mdarray = "0.7.2"
mdarray-linalg = { git = "https://github.com/grothesque/mdarray-linalg", branch = "main" }
mdarray-linalg-faer = { git = "https://github.com/grothesque/mdarray-linalg", branch = "main", package = "mdarray-linalg-faer" }
mdarray-linalg-lapack = { git = "https://github.com/grothesque/mdarray-linalg", branch = "main", package = "mdarray-linalg-lapack" }
faer-traits = "0.23"
thiserror = "2.0"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
petgraph = "0.6"
dyn-clone = "1.0"
kryst = { version = "2.4", default-features = false, features = ["rayon", "logging"] }
omeco = { git = "https://github.com/GiggleLiu/omeco" }

