[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "pytensor4all"
version = "0.1.0"
description = "Python bindings for tensor4all Rust library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "tensor4all developers" }
]
keywords = ["tensor", "quantum", "physics", "ffi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "cffi>=1.15",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/tensor4all/tensor4all-rs"
Repository = "https://github.com/tensor4all/tensor4all-rs"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "scripts/",
    "hatch_build.py",
    "pyproject.toml",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pytensor4all"]
artifacts = [
    "src/pytensor4all/_lib/*.so",
    "src/pytensor4all/_lib/*.dylib",
    "src/pytensor4all/_lib/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
