[package]
name = "blocked-mdarray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Blocked multi-dimensional arrays with sparse-matrix-style operations"

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
anyhow.workspace = true
thiserror.workspace = true
mdarray.workspace = true
mdarray-linalg.workspace = true
mdarray-linalg-faer.workspace = true
faer-traits.workspace = true

[dev-dependencies]
rand.workspace = true
