[package]
name = "matrixci"
description = "Matrix Cross Interpolation algorithms"
version.workspace = true
edition.workspace = true
authors = ["tensor4all contributors"]
license.workspace = true
repository.workspace = true

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
paste.workspace = true

[dev-dependencies]
approx.workspace = true
