[package]
name = "matrixluci"
description = "LU-based pivot selection substrate for matrix and tensor cross interpolation"
version.workspace = true
edition.workspace = true
authors = ["tensor4all contributors"]
license.workspace = true
repository.workspace = true

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
anyhow.workspace = true
thiserror.workspace = true
paste.workspace = true
faer.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
tensor4all-tcicore = { path = "../tensor4all-tcicore" }
rand.workspace = true
rand_chacha.workspace = true
tensor4all-tensorci = { path = "../tensor4all-tensorci" }

[[bench]]
name = "dense_vs_faer"
harness = false

[[bench]]
name = "lazy_block_rook"
harness = false

[[bench]]
name = "end_to_end_chain_tci"
harness = false
