[package]
name = "mdarray-einsum"
version.workspace = true
edition.workspace = true
description = "Einstein summation (einsum) for mdarray with ID-based axis specification"
license.workspace = true

[dependencies]
mdarray.workspace = true
mdarray-linalg.workspace = true
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
omeco.workspace = true

[dev-dependencies]
approx.workspace = true
