[package]
name = "quanticsgrids"
version.workspace = true
edition.workspace = true
authors = [
    "Ritter.Marc <Ritter.Marc@physik.uni-muenchen.de>",
    "Hiroshi Shinaoka <h.shinaoka@gmail.com>",
    "Samuel Badr <samuel.badr@gmail.com>",
]
license.workspace = true
repository.workspace = true
description = "Quantics grid structures for efficient conversion between quantics, grid indices, and original coordinates"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "conversions"
harness = false
