[package]
name = "tensor4all-aci"
description = "Alternating Cross Interpolation elementwise operations for tensor4all tensor trains"
version.workspace = true
edition.workspace = true
authors = [
    "Marc Ritter <mritter@flatironinstitute.org>",
    "Hiroshi Shinaoka <h.shinaoka@gmail.com>",
    "tensor4all contributors",
]
license.workspace = true
repository.workspace = true

[features]
default = ["tenferro-cpu-faer"]
tenferro-cpu-faer = [
    "tensor4all-simplett/tenferro-cpu-faer",
    "tensor4all-tcicore/tenferro-cpu-faer",
    "tensor4all-tensorbackend/tenferro-cpu-faer",
]
tenferro-provider-inject = [
    "tensor4all-simplett/tenferro-provider-inject",
    "tensor4all-tcicore/tenferro-provider-inject",
    "tensor4all-tensorbackend/tenferro-provider-inject",
]

[dependencies]
num-complex.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
thiserror.workspace = true
tensor4all-simplett = { path = "../tensor4all-simplett", default-features = false }
tensor4all-tcicore = { path = "../tensor4all-tcicore", default-features = false }
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend", default-features = false }

[dev-dependencies]
approx.workspace = true
criterion.workspace = true

[[bench]]
name = "elementwise_scaling"
harness = false
