[package]
name = "tensor4all-capi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "C API for tensor4all (Rust) core types"

[lib]
name = "tensor4all_capi"
crate-type = ["cdylib", "rlib"]

[dependencies]
tensor4all-core-common = { path = "../tensor4all-core/common" }
tensor4all-core-tensor = { path = "../tensor4all-core/tensor" }
tensor4all-core-linalg = { path = "../tensor4all-core/linalg" }
tensor4all-itensorlike = { path = "../tensor4all-itensorlike" }
libc = "0.2"
thiserror.workspace = true
paste = "1.0"
num-complex = "0.4"

