[package]
name = "tensor4all-capi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "C API for tensor4all (Rust) core types"

[lib]
name = "tensor4all_capi"
crate-type = ["cdylib", "rlib"]

[dependencies]
tensor4all-core = { path = "../tensor4all-core" }
tensor4all-itensorlike = { path = "../tensor4all-itensorlike" }
tensor4all-simplett = { path = "../tensor4all-simplett" }
tensor4all-tensorci = { path = "../tensor4all-tensorci" }
libc.workspace = true
thiserror.workspace = true
paste.workspace = true
num-complex.workspace = true

