[package]
name = "tensor4all-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["backend-faer"]
backend-faer = ["tensor4all-tensorbackend/backend-faer"]
backend-lapack = ["tensor4all-tensorbackend/backend-lapack"]
backend-libtorch = ["tensor4all-tensorbackend/backend-libtorch"]

[dependencies]
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend" }
matrixci = { path = "../matrixci" }
mdarray-einsum = { path = "../mdarray-einsum" }
num-complex.workspace = true
num-traits.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dyn-clone.workspace = true
rand.workspace = true
rand_distr.workspace = true
omeco.workspace = true
petgraph.workspace = true

[dev-dependencies]
rand_chacha.workspace = true
