[package]
name = "tensor4all-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core tensor types, indices, and operations (SVD, QR, contraction) for tensor4all"

[features]
default = ["backend-tenferro", "tenferro-cpu-faer"]
backend-tenferro = ["tensor4all-tensorbackend/backend-tenferro"]
tenferro-cpu-faer = [
    "tensor4all-tensorbackend/tenferro-cpu-faer",
    "tensor4all-tcicore/tenferro-cpu-faer",
    "tenferro/cpu-faer",
    "tenferro-tensor/cpu-faer",
]
tenferro-provider-inject = [
    "tensor4all-tensorbackend/tenferro-provider-inject",
    "tensor4all-tcicore/tenferro-provider-inject",
    "tenferro/cpu-blas",
    "tenferro-tensor/provider-inject",
]

[dependencies]
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend", default-features = false }
tensor4all-tcicore = { path = "../tensor4all-tcicore", default-features = false }
num-complex.workspace = true
num-traits.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dyn-clone.workspace = true
rand.workspace = true
rand_distr.workspace = true
omeco.workspace = true
petgraph.workspace = true
tenferro.workspace = true
tenferro-tensor.workspace = true

[dev-dependencies]
rand_chacha.workspace = true
tenferro-tensor.workspace = true
