[package]
name = "tensor4all-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core tensor types, indices, and operations (SVD, QR, contraction) for tensor4all"

[features]
default = ["backend-tenferro", "tenferro-cpu-faer"]
backend-tenferro = ["tensor4all-tensorbackend/backend-tenferro"]
tenferro-cpu-faer = [
    "tensor4all-tensorbackend/tenferro-cpu-faer",
    "tensor4all-tcicore/tenferro-cpu-faer",
    "tenferro/cpu-faer",
    "tenferro-ad/cpu-faer",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/cpu-faer",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/cpu-faer",
]
tenferro-system-blas = [
    "tensor4all-tensorbackend/tenferro-system-blas",
    "tensor4all-tcicore/tenferro-system-blas",
    "tenferro/cpu-blas",
    "tenferro-ad/cpu-blas",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/cpu-blas",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/cpu-blas",
]
tenferro-provider-inject = [
    "tensor4all-tensorbackend/tenferro-provider-inject",
    "tensor4all-tcicore/tenferro-provider-inject",
    "tenferro/cpu-blas",
    "tenferro-ad/cpu-blas",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/cpu-blas",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/provider-inject",
]

[dependencies]
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend", default-features = false }
tensor4all-tcicore = { path = "../tensor4all-tcicore", default-features = false }
num-complex.workspace = true
num-traits.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dyn-clone.workspace = true
rand.workspace = true
rand_distr.workspace = true
omeco.workspace = true
petgraph.workspace = true
smallvec.workspace = true
tenferro.workspace = true
tenferro-ad.workspace = true
tenferro-einsum.workspace = true
tenferro-linalg.workspace = true
tenferro-tensor.workspace = true

[dev-dependencies]
rand_chacha.workspace = true
tenferro-tensor.workspace = true
