[package]
name = "tensor4all-hdf5-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HDF5 bindings with runtime library loading (dlopen) for tensor4all-rs"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = ["link"]
# Link to HDF5 at build time (via hdf5-sys)
link = ["dep:hdf5-sys"]
# Load HDF5 at runtime via dlopen (for Julia/Python bindings)
runtime-loading = ["dep:libloading"]
# Complex number support
complex = ["dep:num-complex"]

[dependencies]
# Build-time linking (default)
hdf5-sys = { package = "hdf5-metno-sys", version = "0.11", optional = true }

# Runtime library loading (optional)
libloading = { version = "0.8", optional = true }

# Core dependencies (matching hdf5-metno)
bitflags = "2.4"
cfg-if = "1.0"
libc = { workspace = true }
ndarray = "0.16"
parking_lot = "0.12"
paste = { workspace = true }
thiserror = { workspace = true }

# Optional complex number support
num-complex = { workspace = true, optional = true }

# String types
ascii = "1.1"

[dev-dependencies]
tempfile = "3"
