[package]
name = "tensor4all-hdf5"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HDF5 serialization for tensor4all-rs (ITensors.jl compatible format)"

[dependencies]
tensor4all-core = { path = "../tensor4all-core" }
tensor4all-itensorlike = { path = "../tensor4all-itensorlike" }
tensor4all-hdf5-ffi = { path = "../tensor4all-hdf5-ffi", features = ["complex"] }
num-complex = { workspace = true }
anyhow = { workspace = true }
ndarray = "0.16"

[dev-dependencies]
approx = { workspace = true }
tempfile = "3"
