[package]
name = "tensor4all-interpolativeqtt"
version.workspace = true
edition.workspace = true
authors = [
    "Marc Ritter <Ritter.Marc@physik.uni-muenchen.de>",
    "Hiroshi Shinaoka <h.shinaoka@gmail.com>",
    "Martin Mikkelsen <https://github.com/MartinMikkelsen>",
]
license.workspace = true
repository.workspace = true
description = "Interpolative Quantics Tensor Train construction"

[features]
default = ["tenferro-cpu-faer"]
tenferro-cpu-faer = [
    "tensor4all-simplett/tenferro-cpu-faer",
    "tensor4all-tensorbackend/tenferro-cpu-faer",
]
tenferro-provider-inject = [
    "tensor4all-simplett/tenferro-provider-inject",
    "tensor4all-tensorbackend/tenferro-provider-inject",
]

[dependencies]
thiserror.workspace = true
tensor4all-tcicore = { path = "../tensor4all-tcicore", default-features = false }
tensor4all-simplett = { path = "../tensor4all-simplett", default-features = false }
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend", default-features = false }

[dev-dependencies]
approx.workspace = true
quanticsgrids.workspace = true
rand.workspace = true
