[package]
name = "tensor4all-itensorlike"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ITensors.jl-like API for tensor operations"
readme = "README.md"
keywords = ["tensor", "itensor", "tensor-network"]
categories = ["science", "mathematics"]

[features]
default = ["tenferro-cpu-faer"]
tenferro-cpu-faer = [
    "tensor4all-core/tenferro-cpu-faer",
    "tensor4all-treetn/tenferro-cpu-faer",
]
tenferro-provider-inject = [
    "tensor4all-core/tenferro-provider-inject",
    "tensor4all-treetn/tenferro-provider-inject",
]

[dependencies]
tensor4all-core = { path = "../tensor4all-core", default-features = false }
tensor4all-treetn = { path = "../tensor4all-treetn", default-features = false }
num-complex.workspace = true
thiserror.workspace = true
petgraph.workspace = true
rand.workspace = true
anyhow.workspace = true

[dev-dependencies]
approx.workspace = true
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend", default-features = false, features = ["tenferro-cpu-faer"] }
