[package]
name = "tensor4all-matrixci"
description = "Matrix Cross Interpolation algorithms for tensor4all"
version.workspace = true
edition.workspace = true
authors = ["tensor4all contributors"]
license = "MIT"
repository.workspace = true

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
approx = "0.5"
