[package]
name = "tensor4all-partitionedtt"
description = "Partitioned Tensor Train for tensor4all"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["tenferro-cpu-faer"]
tenferro-cpu-faer = [
    "tensor4all-core/tenferro-cpu-faer",
    "tensor4all-itensorlike/tenferro-cpu-faer",
    "tensor4all-simplett/tenferro-cpu-faer",
    "tensor4all-tcicore/tenferro-cpu-faer",
    "tensor4all-tensorbackend/tenferro-cpu-faer",
    "tensor4all-tensorci/tenferro-cpu-faer",
]
tenferro-provider-inject = [
    "tensor4all-core/tenferro-provider-inject",
    "tensor4all-itensorlike/tenferro-provider-inject",
    "tensor4all-simplett/tenferro-provider-inject",
    "tensor4all-tcicore/tenferro-provider-inject",
    "tensor4all-tensorbackend/tenferro-provider-inject",
    "tensor4all-tensorci/tenferro-provider-inject",
]

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
rand.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tensor4all-core = { path = "../tensor4all-core", default-features = false }
tensor4all-itensorlike = { path = "../tensor4all-itensorlike", default-features = false }
tensor4all-simplett = { path = "../tensor4all-simplett", default-features = false }
tensor4all-tcicore = { path = "../tensor4all-tcicore", default-features = false }
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend", default-features = false }
tensor4all-tensorci = { path = "../tensor4all-tensorci", default-features = false }

[dev-dependencies]
approx.workspace = true
