[package]
name = "tensor4all-simpletensortrain"
description = "Simple Tensor Train (MPS) algorithms for tensor4all"
version.workspace = true
edition.workspace = true
authors = [
    "Simone Foderà <simone.fodera@lmu.de>",
    "Marc Ritter <Ritter.Marc@physik.uni-muenchen.de>",
    "Hiroshi Shinaoka <h.shinaoka@gmail.com>",
]
license = "MIT"
repository.workspace = true

[features]
default = ["backend-faer"]
backend-faer = ["mdarray-linalg-faer"]
backend-lapack = ["mdarray-linalg-lapack"]

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
mdarray.workspace = true
mdarray-linalg.workspace = true
mdarray-linalg-faer = { workspace = true, optional = true }
mdarray-linalg-lapack = { workspace = true, optional = true }
faer-traits.workspace = true
matrixci = { path = "../matrixci" }
tensor4all-core = { path = "../tensor4all-core" }

[dev-dependencies]
approx.workspace = true
rand_chacha.workspace = true
