[package]
name = "tensor4all-simplett"
description = "Simple Tensor Train (MPS) algorithms for tensor4all"
version.workspace = true
edition.workspace = true
authors = [
    "Simone Foderà <simone.fodera@lmu.de>",
    "Marc Ritter <Ritter.Marc@physik.uni-muenchen.de>",
    "Hiroshi Shinaoka <h.shinaoka@gmail.com>",
]
license.workspace = true
repository.workspace = true

[features]
default = ["backend-faer"]
backend-faer = ["tensor4all-tensorbackend/backend-faer"]
backend-lapack = ["tensor4all-tensorbackend/backend-lapack"]

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
mdarray.workspace = true
faer-traits.workspace = true
matrixci = { path = "../matrixci" }
tensor4all-core = { path = "../tensor4all-core" }
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend" }

[dev-dependencies]
approx.workspace = true
rand_chacha.workspace = true
