[package]
name = "tensor4all-simplett"
description = "Simple Tensor Train (MPS) algorithms for tensor4all"
version.workspace = true
edition.workspace = true
authors = [
    "Simone Foderà <simone.fodera@lmu.de>",
    "Marc Ritter <Ritter.Marc@physik.uni-muenchen.de>",
    "Hiroshi Shinaoka <h.shinaoka@gmail.com>",
]
license.workspace = true
repository.workspace = true

[features]
default = ["backend-tenferro", "tenferro-cpu-faer"]
backend-tenferro = ["tensor4all-tensorbackend/backend-tenferro"]
tenferro-cpu-faer = [
    "tensor4all-core/tenferro-cpu-faer",
    "tensor4all-tcicore/tenferro-cpu-faer",
    "tensor4all-tensorbackend/tenferro-cpu-faer",
    "tenferro-einsum/cpu-faer",
    "tenferro-tensor/cpu-faer",
]
tenferro-provider-inject = [
    "tensor4all-core/tenferro-provider-inject",
    "tensor4all-tcicore/tenferro-provider-inject",
    "tensor4all-tensorbackend/tenferro-provider-inject",
    "tenferro-einsum/cpu-blas",
    "tenferro-tensor/provider-inject",
]

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
bnum.workspace = true
tensor4all-tcicore = { path = "../tensor4all-tcicore", default-features = false }
tensor4all-core = { path = "../tensor4all-core", default-features = false }
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend", default-features = false }
tenferro-einsum.workspace = true
tenferro-tensor.workspace = true

[dev-dependencies]
approx.workspace = true
rand_chacha.workspace = true
criterion.workspace = true

[[bench]]
name = "cache_overhead"
harness = false
