[package]
name = "tensor4all-tcicore"
description = "TCI core infrastructure: matrix CI, cached function, index sets"
version.workspace = true
edition.workspace = true
authors = ["tensor4all contributors"]
license.workspace = true
repository.workspace = true

[features]
default = ["tenferro-cpu-faer"]
tenferro-cpu-faer = [
    "tensor4all-tensorbackend/tenferro-cpu-faer",
    "tenferro-einsum/cpu-faer",
    "tenferro-tensor/cpu-faer",
]
tenferro-provider-inject = [
    "tensor4all-tensorbackend/tenferro-provider-inject",
    "tenferro-einsum/cpu-blas",
    "tenferro-tensor/provider-inject",
]

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
paste.workspace = true
bnum.workspace = true
tenferro-einsum.workspace = true
tenferro-tensor.workspace = true
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend", default-features = false }

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
rand_chacha.workspace = true
tensor4all-tensorci = { path = "../tensor4all-tensorci", default-features = false, features = ["tenferro-cpu-faer"] }
uint.workspace = true

[[bench]]
name = "rrlu_bench"
harness = false

[[bench]]
name = "cached_function"
harness = false

[[bench]]
name = "dense_vs_tenferro"
harness = false

[[bench]]
name = "end_to_end_chain_tci"
harness = false

[[bench]]
name = "lazy_block_rook"
harness = false
